# SkillHub

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  DESIGN.md  OAUTH_SETUP.md  README.en.md  README.md  README.zh-TW.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: pull_request_template.md
docs/superpowers/plans/: 2026-07-09-skillhub-m0-scaffold.md  2026-07-09-skillhub-m1-core.md  2026-07-09-skillhub-m2-market-auth.md  2026-07-09-skillhub-m3-portability.md  2026-07-10-skillhub-m4-polish.md  2026-07-10-skillhub-m5-feedback-ux.md  2026-07-11-skillhub-m6-feedback2.md
docs/superpowers/specs/: 2026-07-09-skillhub-design.md
src/: App.test.tsx  App.tsx  index.css  index.css.test.ts  main.tsx  routes.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  auth.rs  dashboard.rs  health.rs  library.rs  market.rs  mod.rs  portability.rs  setting.rs  sync.rs
src-tauri/src/domain/: agent.rs  auth.rs  market.rs  mod.rs  portability.rs  resource.rs  setting.rs  sync.rs
src-tauri/src/infra/: http.rs  keychain.rs  mod.rs  repo_activity.rs  repo_agent.rs  repo_assoc.rs  repo_auth.rs  repo_impexp.rs  repo_market.rs  repo_resource.rs  repo_setting.rs  repo_sync.rs  store.rs
src-tauri/src/infra/adapter/: codex.rs  hermes.rs  json_mcp.rs  mod.rs  skill_target.rs  util.rs
src-tauri/src/infra/source/: github_mcp.rs  github_skills.rs  mcp_registry.rs  mod.rs
src-tauri/src/services/: agent_import.rs  auth.rs  dashboard.rs  library.rs  market.rs  mod.rs  portability.rs  setting.rs  sync.rs
src/api/: agent.test.ts  agent.ts  auth.test.ts  auth.ts  dashboard.test.ts  dashboard.ts  index.test.ts  index.ts  library.test.ts  library.ts  market.test.ts  market.ts  portability.test.ts  portability.ts  setting.test.ts  setting.ts  sync.test.ts  sync.ts
src/components/auth/: auth-display.ts  auth-modal.test.tsx  auth-modal.tsx
src/components/common/: data-table.test.tsx  data-table.tsx  detail-panel.test.tsx  detail-panel.tsx  empty-state.test.tsx  empty-state.tsx  page-header.test.tsx  page-header.tsx  skeleton.test.tsx  skeleton.tsx  stat-card.test.tsx  stat-card.tsx  sync-status-badge.test.tsx  sync-status-badge.tsx  type-badge.test.tsx  type-badge.tsx
src/components/installed/: resource-detail-panel.test.tsx  resource-detail-panel.tsx  resource-display.test.ts  resource-display.ts  resource-list.test.tsx  resource-list.tsx  uninstall-dialog.test.tsx  uninstall-dialog.tsx
src/components/layout/: app-shell.tsx  nav-config.ts  sidebar.test.tsx  sidebar.tsx
src/components/marketplace/: market-card.test.tsx  market-card.tsx  market-detail-panel.test.tsx  market-detail-panel.tsx  (+4 more)
src/i18n/: en.json  index.ts  zh.json
src/lib/: dialog.test.ts  dialog.ts  query.ts  utils.test.ts  utils.ts
src/pages/: dashboard.test.tsx  dashboard.tsx  installed.test.tsx  installed.tsx  marketplace-detail.test.tsx  marketplace-detail.tsx  marketplace.test.tsx  marketplace.tsx  portability.test.tsx  portability.tsx  settings.test.tsx  settings.tsx  sync-center.test.tsx  sync-center.tsx
src/stores/: ui.test.ts  ui.ts
src/theme/: theme-provider.test.tsx  theme-provider.tsx
(+42 files in other folders)
