[package]
name = "skillhub"
version = "0.1.0"
description = "SkillHub - 统一管理并同步本机 AI 工具的 Skill 与 MCP"
authors = ["Charles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dirs = "6"
toml = "1"
# rustls-tls: 走纯 Rust TLS 实现(webpki 根证书), 不依赖系统 openssl
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "4"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

